src/assets/css/tailwind.css
/* ... */
.profile {
  @apply flex items-center justify-between gap-3 my-3;
}

.profile-content {
  @apply flex items-center gap-3 mt-3;
}

.profile-details {
  @apply flex  flex-col gap-1;
}

.profile-details-name {
  @apply text-[14px] font-semibold;
}

.profile-details-id {
  @apply text-[12px] font-semibold;
}

.card-content {
  @apply w-full flex items-center justify-center gap-8;
}

.card-text {
  @apply text-[16px] font-medium;
}

.card-count {
  @apply text-[44px] font-semibold;
}

.err-border {
  @apply border-red-500;
}

.err-txt {
  @apply text-start w-[100%] text-red-400 text-[13px] flex gap-3 p-1 absolute top-[100%];
}

.table-box {
  @apply w-[99.5%] h-full rounded-lg overflow-hidden mt-4;
}

.table-box-top {
  @apply w-full flex items-center 2xl:flex-row xl:flex-row lg:flex-row md:flex-col sm:flex-col xs:flex-col mobile:flex-col xss:flex-col gap-2 py-2 px-3;
}

/* .small-screen-scroll {
  @apply max-h-[20%] overflow-auto
} */

.table-box-top-left {
  @apply 2xl:flex-1 xl:flex-1 lg:flex-1 md:w-full sm:w-full xs:w-full mobile:w-full xss:w-full h-[50px] flex items-center;
}

.header-container {
  @apply flex items-center w-full 2xl:flex-row xl:flex-row lg:flex-row md:flex-row sm:flex-row xs:flex-row mobile:flex-col xss:flex-col 2xl:gap-3 xl:gap-3 lg:gap-3 md:gap-3 sm:gap-3 xs:gap-3 mobile:gap-0 xss:gap-0 2xl:px-6  xl:px-6  lg:px-6  md:px-0  sm:px-0  xs:px-0  mobile:px-0 xss:px-0;
}

.header-container-left {
  @apply text-[20px] xs:text-[16px] mobile:text-[16px] xss:text-[16px] font-semibold;
}

.header-container-right {
  @apply text-[12px] text-dark_purple border-[1px] border-[#dfc5fd] bg-light_purple w-[150px] mobile:w-[150px] xss:w-[150px] p-[2px] text-center rounded-full;
}

.table-box-top-right {
  @apply 2xl:w-[30%] xl:w-[30%] lg:w-[60%] md:w-[95%] sm:w-[95%] xs:w-full mobile:w-full xss:w-full h-[50px] flex 2xl:flex-row xl:flex-row lg:flex-row md:flex-row sm:flex-row xs:flex-col mobile:flex-col xss:flex-col gap-3 z-40
}

.table-box-top-right-grid {
  @apply grid 2xl:grid-cols-2 xl:grid-cols-2 lg:grid-cols-2 md:grid-cols-2 sm:grid-cols-2 xs:grid-cols-1 xss:grid-cols-1 mobile:grid-cols-1 gap-3;
}

.table-box-top-right-content-date {
  @apply w-full h-full flex items-end;
}

.table-box-top-right-content-filter {
  @apply w-full h-full flex items-end;
}

.table-box-top-right-1 {
  @apply 2xl:w-[30%] xl:w-[30%] lg:w-[50%] md:w-[100%] sm:w-[100%] xs:w-full mobile:w-full xss:w-full h-[50px] flex 2xl:flex-row xl:flex-row lg:flex-row md:flex-row sm:flex-row xs:flex-col mobile:flex-col xss:flex-col gap-3 z-40;
}
.table-box-top-right-grid-1 {
  @apply grid 2xl:grid-cols-2 xl:grid-cols-2 lg:grid-cols-2 md:grid-cols-2 sm:grid-cols-2 xs:grid-cols-1 xss:grid-cols-1 mobile:grid-cols-1 gap-3 w-full;
}

.table-box-top-right-content-date-1 {
  @apply w-full h-full flex items-end;
}

.table-box-top-right-content-filter-1 {
  @apply w-full h-full flex items-end ;
}

.table-box-top-right-content-button-1 {
  @apply bg-primary_color w-full rounded-md text-white py-2 flex items-center justify-center font-medium gap-1;
}

.add-doctor-container {
  @apply w-[99%] h-full rounded-lg mx-auto py-6 2xl:px-10 xl:px-10 lg:px-10 md:px-6 sm:px-6 xs:px-3 xss:px-1 mobile:px-3  overflow-hidden;
}

.add-doctor-top {
  @apply flex items-center gap-4;
}

.add-doctor-top-title {
  @apply text-[20px] font-semibold;
}

.add-doctor-content {
  @apply w-full h-[80%] flex flex-col items-center justify-center gap-12;
}

.add-doctor-content-header {
  @apply text-[16px] font-semibold;
}

.add-doctor-content-phonenumber {
  @apply bg-primary_color text-white font-medium py-3 rounded-lg 2xl:w-[40%] xl:w-[40%] lg:w-[60%] md:w-[80%] sm:w-[80%] xs:w-[100%] xss:w-[100%] mobile:w-[100%];
}

.add-medicine-top {
  @apply w-full h-[12%] rounded-lg mt-1 flex items-center gap-6 px-8;
}

.add-medicine-top-text {
  @apply text-[20px] font-semibold;
}

.add-medicine-body {
  @apply grid  gap-8 mt-10 2xl:grid-cols-2 xl:grid-cols-2 lg:grid-cols-2 md:grid-cols-1 sm:grid-cols-1 xs:grid-cols-1 mobile:grid-cols-1 xss:grid-cols-1;
}

.add-medicine-footer {
  @apply mt-10 w-full flex items-center justify-center;
}

.add-medicine-footer-button {
  @apply bg-primary_color  py-3 rounded-lg text-white text-[16px] 2xl:w-[20%] xl:w-[20%] lg:w-[20%] md:w-[40%] sm:w-[40%] xs:w-[60%] mobile:w-[70%] xss:w-[80%];
}

.logout-button {
  @apply w-[130px] py-2 rounded-lg border-[1px];
}

.prescription-container {
  @apply flex items-start w-full h-full 2xl:flex-row xl:flex-row lg:flex-col md:flex-col sm:flex-col xs:flex-col mobile:flex-col xss:flex-col overflow-auto;
}

.prescription-right-container {
  @apply h-[90%] flex flex-col gap-4 mx-1 2xl:w-[60%] xl:w-[60%] lg:w-[100%] md:w-[100%] sm:w-[100%] xs:w-[100%] mobile:w-[100%] xss:w-[100%];
}
.prescription-right {
  @apply w-full h-full gap-6 overflow-auto px-3;
}

.add-prescription-top {
  @apply w-full h-[12%] rounded-lg  flex items-center gap-6 px-3;
}

.prescription-right-top {
  @apply w-full;
}

.prescription-right-top-inside {
  @apply flex flex-col items-center justify-center w-full py-6 gap-4;
}

.prescription-right-top-inside-image {
  @apply w-[100px] h-[100px] border-[3px] border-green_light rounded-full relative;
}
.prescription-right-top-inside-image1 {
  @apply w-[100px] h-[100px] rounded-full relative;
}

.prescription-right-top-inside-image-edit-button {
  @apply absolute -bottom-1 -right-2 bg-white text-primary_color rounded-full flex items-center justify-center w-[25px] h-[25px];
}

.prescription-right-top-input {
  @apply outline-none border-b-[1px] border-gray-300 px-2;
}

.prescription-right-content-container {
  @apply p-2 my-6;
}

.prescription-right-content-container-header {
  @apply flex items-center justify-between;
}

.prescription-right-content-container-header-text {
  @apply text-[20px] font-semibold;
}

.prescription-right-content-container-header-button {
  @apply flex items-center gap-3 border-[1px] rounded-lg border-primary_color py-1 px-3 text-primary_color;
}
/* ... */

